--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/phone.css
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/phone.css
@@ -103,6 +103,18 @@
   font-size: 28px;
 }
 
+.ckdExtendedVerViewPanel .mgwt-SmartButton.mgwt-Button.ckd-suggestionBtn {
+  font-size: 12px;
+}
+
+.ckd-suggestionPanel-content {
+  margin-top: -5px;
+}
+
+.ckd-suggestionPanel .ckd-suggestionPanel-content div {
+  padding-bottom: 0.5em;
+}
+
 .ckdProtocolStepViewPanel .mgwt-SmartButton.mgwt-Button.mgwt-Button-round {
   font-size: 18px;
 }
