--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-landscape.css
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-landscape.css
@@ -87,3 +87,12 @@ body {
   width: 80%;
 }
 
+.ckd-ProtocolStepPanel {
+  margin-top: 60px;
+  height: 360px;
+}
+
+.ckd-ProtocolStepPanel-center {
+  height: 42%;
+}
+
