--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-portrait.css
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-portrait.css
@@ -92,10 +92,12 @@ body {
   margin-left: 10px;
 }
 
-
-
 .ckd-suggestionBtn {
   width: 80%;
+}
+
+.ckd-ProtocolHeaderPanel-center {
+  margin-left: 95px;
 }
 
 .ckd-ProtocolStepPanel {
