--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-landscape.css
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/tablet-landscape.css
@@ -87,10 +87,6 @@ body {
   width: 80%;
 }
 
-.ckd-ProtocolHeaderPanel-center {
-  margin-left: 85px;
-}
-
 .ckd-ProtocolStepPanel {
   margin-top: 60px;
   height: 360px;
@@ -99,4 +95,47 @@ body {
 .ckd-ProtocolStepPanel-center {
   height: 34%;
 }
+
+/** VARI TENTATIVI DI RISOLVER IL BUG DEL LANDSCAPE SUL PROTOCOL HEADER BUTTON **/
+
+.ckd-ProtocolHeaderPanel {
+  width: 32.75em;
+  height: 2.86em;
+  overflow: hidden;
+}
+
+.ckd-ProtocolHeaderButton {
+  position: absolute !important;
+  top: -12px !important;
+  left: 0px !important;
+  width: 85px !important;
+  height: 63px !important;
+  overflow: hidden !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.ckd-ProtocolHeaderButton-border-container {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.ckd-ProtocolHeaderButton-border-content {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.ckd-ProtocolHeaderButton-text {
+  margin: 0px !important;
+  padding: 0px !important;
+}
+
+.ckd-ProtocolHeaderPanel-center {
+  margin-left: 85px;
+}
+
+.ckd-ProtocolHeaderButton-border-container, .ckd-ProtocolHeaderButton-text {
+  margin-top: 0px !important;
+}
+
 
