--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/ProtocolStepView.ui.xml
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/ProtocolStepView.ui.xml
@@ -8,14 +8,12 @@
   <g:HTMLPanel ui:field="wrapperPanel" addStyleNames="ckdHomePanel, ckdProtocolStepViewPanel, outputPanel">
   
     <gc:SimpleContainer addStyleNames="ckd-ProtocolHeaderPanel" ui:field="protocolHeaderPanel">
-      <!-- 
-      <g:HTMLPanel addStyleNames="ckd-ProtocolHeaderButton" ui:field="backBtnPanel">
+      <g:HTMLPanel addStyleNames="ckd-ProtocolHeaderButton" ui:field="protocolHeaderButton">
         <div class="ckd-ProtocolHeaderButton-border-container">
           <span class="ckd-ProtocolHeaderButton-border-content"></span>
         </div>
         <P:ProtocolStepView.BackStepButton ui:field="backBtn" addStyleNames="ckd-ProtocolHeaderButton-text" text="Prev Step"/>
       </g:HTMLPanel>
-       -->
       <g:HTML addStyleNames="ckd-ProtocolHeaderPanel-center">
         Protocol for the further investigation of a subject with positive reagent strip or quantitative test for albuminuria/proteinuria
       </g:HTML>
@@ -36,12 +34,14 @@
       </gc:SimpleContainer>
     </gc:SimpleContainer>
     
+    <!-- 
       <g:HTMLPanel addStyleNames="ckd-ProtocolHeaderButton" ui:field="protocolHeaderButton">
         <div class="ckd-ProtocolHeaderButton-border-container">
           <span class="ckd-ProtocolHeaderButton-border-content"></span>
         </div>
         <P:ProtocolStepView.BackStepButton ui:field="backBtn" addStyleNames="ckd-ProtocolHeaderButton-text" text="Prev Step"/>
       </g:HTMLPanel>
+     -->
 
   </g:HTMLPanel>
   
