--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/CKDOutputView.ui.xml
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/view/CKDOutputView.ui.xml
@@ -61,11 +61,17 @@
         <g:HTML ui:field="bsaHtml" HTML="BSA = 0.00" addStyleNames="{style.ckdLabel} ckd-BsaLabel"></g:HTML>
         <gc:Spacer width="0px" addStyleNames="ckd-bsaRightSpacer"/>
       </g:HorizontalPanel>
+      
+      <g:HorizontalPanel ui:field="ibwPanel">
+        <gc:Spacer width="7.6em"/>
+        <g:HTML ui:field="ibwHtml" HTML="IBW = 0.00" addStyleNames="{style.ckdLabel} ckd-IbwLabel"></g:HTML>
+        <gc:Spacer width="0px" addStyleNames="ckd-bsaRightSpacer"/>
+        <g:Anchor text="Use IBW" ui:field="useIbwBtn" addStyleNames="ckd-UseIbwBtn"/>
+      </g:HorizontalPanel>
 
       <g:HorizontalPanel>
         <gc:Spacer height="0.4em" addStyleNames="ckd-outputSectionSeparator"/>
       </g:HorizontalPanel>
-      
       
       
       <!-- ==========    MDRD 1 SECTION    ========== -->
