--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/phone.css
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/ios/phone.css
@@ -79,6 +79,10 @@
   font-size: 9pt;
 }
 
+.gwt-HTML.ckd-Label.ckd-IbwLabel {
+  font-size: 9pt;
+}
+
 .gwt-TextBox.ckd-Risk {
   font-size: 14pt;
 }
