--- a/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/main.css
+++ b/trunk/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/main.css
@@ -106,6 +106,11 @@
   width: 120px;
 }
 
+.gwt-Anchor.ckd-UseIbwBtn {
+  color: yellow;
+  font-size: 12px;
+}
+
 .mgwt-Button.ckd-HelpBtn {
   width: 6em;
   padding: 6px 6px;
