--- a/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/main.css
+++ b/ckd-risk-calc-mob/gwt/src/main/java/it/mate/ckd/client/ui/theme/custom/css/main.css
@@ -106,9 +106,16 @@
   width: 120px;
 }
 
+.gwt-HTML.ckd-Label.ckd-IbwLabel {
+  width: 8em;
+}
+
 .gwt-Anchor.ckd-UseIbwBtn {
   color: yellow;
   font-size: 12px;
+  font-family: Trebuchet MS;
+  font-weight: 600;
+  position: absolute;
 }
 
 .mgwt-Button.ckd-HelpBtn {
