--- a/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/view/HomeView.ui.xml
+++ b/gae-endp-test/gae-endp-mobile-test/gwt/src/main/java/it/mate/gend/client/view/HomeView.ui.xml
@@ -16,6 +16,7 @@
     <g:HorizontalPanel>
       <m:MTextBox ui:field="messageBox" width="10em" height="2em"/>
       <m:Button text="add" ui:field="addBtn"/>
+      <m:Button text="add logged" ui:field="addLoggedBtn"/>
     </g:HorizontalPanel>
     
     <g:VerticalPanel ui:field="outputPanel"></g:VerticalPanel>
